docs: change package name from l0learn to fastSparseGAMs

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-description = L0Learn is a highly efficient framework for solving L0-regularized learning problems.
-author = Hussein Hazimeh
-author_email = hazimeh@google.com
-maintainer = Tim Nonet
-maintainer_email = tim.nonet@gmail.com
+description = fastSparseGAMs is a Python package that offers an efficient framework for solving L0-regularized learning problems in sparse generalized additive models (GAMs). Leveraging the L0Learn package, this package introduces two novel algorithms, namely quadratic cuts and dynamic feature ordering, to deliver faster computational speed. Additionally, it comes with a new loss function (exponential loss) for classification.
+author = Jiachang Liu
+author_email = jiachang.liu@duke.edu
+maintainer = Tynan Seltzer
+maintainer_email = tynanseltzer@gmail.com
 license = MIT
-url = https://github.com/hazimehh/L0Learn
+url = https://github.com/tynanseltzer/L0Learn
 project_urls =
-    Source  = https://github.com/hazimehh/L0Learn
-    Tracker = https://github.com/hazimehh/L0Learn/issues
+    Source  = https://github.com/tynanseltzer/L0Learn
+    Tracker = https://github.com/tynanseltzer/L0Learn/issues
 classifiers=
     Intended Audience :: Science/Research
     Intended Audience :: Developers
