--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,79 +1,121 @@
-name: Build and Deploy
+name: Build
 
 on:
   workflow_dispatch:
-    
+
   push:
     # Pattern matched against refs/tags
-    tags:        
-      - '**'   
+    tags:
+      - '**'
 
 jobs:
   build_wheels:
-    name: Build wheels on ${{ matrix.os }}
+    name: Build wheels on ${{ matrix.os }} for Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macOS-10.15] # windows-2019, ]
-
+        python-version: [3.7, 3.8, 3.9, 3.10, 3.11, 3.12]
 
     steps:
       - name: Checkout l0learn
         uses: actions/checkout@v2
         with:
           submodules: true
-        
+
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: ${{ matrix.python-version }}
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.5.0
+        run: python -m pip install cibuildwheel
 
       - name: Build wheels
         run: |
           cd python
           python -m cibuildwheel --output-dir l0learn-wheelhouse
-        env: 
+        env:
           CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
-          CIBW_BEFORE_ALL_LINUX: "yum install -y lapack-devel || apt-get install -y liblapack-dev && bash scripts/install_linux_libs.sh"
-          CIBW_BEFORE_TEST: "pip install pytest numpy hypothesis"
-          CIBW_TEST_COMMAND: "pytest {package}/tests"
-          CIBW_ARCHS_MACOS: "x86_64 arm64"
-          CIBW_BUILD_VERBOSITY: 3
 
-      - uses: actions/upload-artifact@v2
-        with:
-          name: l0learn-wheelhouse
-          path: python/l0learn-wheelhouse/
 
-  upload-to-pypip:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-    name: Publish a Python distribution to PyPI
-    runs-on: ubuntu-latest
-    needs: build_wheels
+#name: Build
+#
+#on:
+#  workflow_dispatch:
+#
+#  push:
+#    # Pattern matched against refs/tags
+#    tags:
+#      - '**'
+#
+#jobs:
+#  build_wheels:
+#    name: Build wheels on ${{ matrix.os }}
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        os: [ubuntu-latest, macOS-10.15] # windows-2019, ]
+#
+#
+#    steps:
+#      - name: Checkout l0learn
+#        uses: actions/checkout@v2
+#        with:
+#          submodules: true
+#
+#      - name: Setup Python
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: 3.7
+#
+#      - name: Install cibuildwheel
+#        run: python -m pip install cibuildwheel
+#
+#      - name: Build wheels
+#        run: |
+#          cd python
+#          python -m cibuildwheel --output-dir l0learn-wheelhouse
+#        env:
+#          CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
+#          CIBW_BEFORE_ALL_LINUX: "yum install -y lapack-devel || apt-get install -y liblapack-dev && bash scripts/install_linux_libs.sh"
+##          CIBW_BEFORE_TEST: "pip install pytest numpy hypothesis"
+##          CIBW_TEST_COMMAND: "pytest {package}/tests"
+#          CIBW_ARCHS_MACOS: "x86_64 arm64"
+#          CIBW_BUILD_VERBOSITY: 3
 
-    steps:
-      - name: Checkout l0learn
-        uses: actions/checkout@v2
-
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.7
-
-      - name: Download l0learn-wheelhouse artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: l0learn-wheelhouse
-          path: python/l0learn-wheelhouse/
-
-      - name: upload-artifact
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          packages_dir: python/l0learn-wheelhouse/
+#      - uses: actions/upload-artifact@v2
+#        with:
+#          name: l0learn-wheelhouse
+#          path: python/l0learn-wheelhouse/
+#
+#  upload-to-pypip:
+#    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+#    name: Publish a Python distribution to PyPI
+#    runs-on: ubuntu-latest
+#    needs: build_wheels
+#
+#    steps:
+#      - name: Checkout l0learn
+#        uses: actions/checkout@v2
+#
+#      - name: Setup Python
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: 3.7
+#
+#      - name: Download l0learn-wheelhouse artifact
+#        uses: actions/download-artifact@v3
+#        with:
+#          name: l0learn-wheelhouse
+#          path: python/l0learn-wheelhouse/
+#
+#      - name: upload-artifact
+#        uses: pypa/gh-action-pypi-publish@release/v1
+#        with:
+#          user: __token__
+#          password: ${{ secrets.PYPI_API_TOKEN }}
+#          packages_dir: python/l0learn-wheelhouse/
 
