--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -39,6 +39,13 @@ jobs:
         env:
           CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
 
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: ./wheelhouse/*.whl
+
+
 
 #name: Build
 #
