--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macOS-10.15] # windows-2019, ]
+        os: [ubuntu-latest, macos-latest] # windows-2019, ]
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
