--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -17,11 +17,31 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            python-version: [ "3.7", "3.8", "3.9", "3.10", "3.11" ]
+            python-version: "3.7"
+          - os: ubuntu-latest
+            python-version: "3.8"
+          - os: ubuntu-latest
+            python-version: "3.9"
+          - os: ubuntu-latest
+            python-version: "3.10"
+          - os: ubuntu-latest
+            python-version: "3.11"
           - os: macos-latest
-            python-version: [ "3.7", "3.8", "3.9", "3.10", "3.11" ]
+            python-version: "3.7"
+          - os: macos-latest
+            python-version: "3.8"
+          - os: macos-latest
+            python-version: "3.9"
+          - os: macos-latest
+            python-version: "3.10"
+          - os: macos-latest
+            python-version: "3.11"
           - os: windows-2019
-            python-version: [ "3.7", "3.8", "3.9" ]
+            python-version: "3.7"
+          - os: windows-2019
+            python-version: "3.8"
+          - os: windows-2019
+            python-version: "3.9"
     steps:
       - name: Checkout l0learn
         uses: actions/checkout@v2
@@ -42,7 +62,7 @@ jobs:
           python -m cibuildwheel --output-dir l0learn-wheelhouse
         env:
           CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
-          CIBW_BUILD: cp${{ matrix.python-version }}-*
+          CIBW_BUILD: cp${{ matrix.python-version.replace('.', '') }}-*
 
       - name: Upload wheels
         uses: actions/upload-artifact@v2
