--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -57,11 +57,13 @@ jobs:
         run: python -m pip install cibuildwheel
 
       - name: Build wheels
-        run: |
-          cd python
-          python_version=${{ matrix.python-version }}
-          python_version=${python_version//./}
-          python -m cibuildwheel --output-dir l0learn-wheelhouse
+        env:
+          PYTHON_VER: ${{ matrix.python-version }}
+          run: |
+            cd python
+            python_version=${PYTHON_VER//./}
+            python -m cibuildwheel --output-dir l0learn-wheelhouse
+          shell: bash
           env:
             CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
             CIBW_BUILD: "cp${python_version}-*"
