--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -9,39 +9,15 @@ on:
       - '**'
 
 jobs:
-  build_wheels:
+  build_wheels_not_windows:
     name: Build wheels on ${{ matrix.os }} for Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - os: ubuntu-latest
-            python-version: "3.7"
-          - os: ubuntu-latest
-            python-version: "3.8"
-          - os: ubuntu-latest
-            python-version: "3.9"
-          - os: ubuntu-latest
-            python-version: "3.10"
-          - os: ubuntu-latest
-            python-version: "3.11"
-          - os: macos-latest
-            python-version: "3.7"
-          - os: macos-latest
-            python-version: "3.8"
-          - os: macos-latest
-            python-version: "3.9"
-          - os: macos-latest
-            python-version: "3.10"
-          - os: macos-latest
-            python-version: "3.11"
-          - os: windows-2019
-            python-version: "3.7"
-          - os: windows-2019
-            python-version: "3.8"
-          - os: windows-2019
-            python-version: "3.9"
+        os: [ubuntu-latest, macOS-latest]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+
     steps:
       - name: Checkout l0learn
         uses: actions/checkout@v2
@@ -57,16 +33,11 @@ jobs:
         run: python -m pip install cibuildwheel
 
       - name: Build wheels
+        run: |
+          cd python
+          python -m cibuildwheel --output-dir l0learn-wheelhouse
         env:
-          PYTHON_VER: ${{ matrix.python-version }}
-          run: |
-            cd python
-            python_version=${PYTHON_VER//./}
-            python -m cibuildwheel --output-dir l0learn-wheelhouse
-          shell: bash
-          env:
-            CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
-            CIBW_BUILD: "cp${python_version}-*"
+          CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
 
       - name: Upload wheels
         uses: actions/upload-artifact@v2
@@ -74,9 +45,92 @@ jobs:
           name: l0learn-wheelhouse
           path: python/l0learn-wheelhouse/
 
+  build_wheels_windows:
+    name: Build wheels on ${{ matrix.os }} for Python ${{ matrix.python-version }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-2019]
+        python-version: [ "3.7", "3.8", "3.9"]
 
+    steps:
+      - name: Checkout l0learn
+        uses: actions/checkout@v2
+        with:
+          submodules: true
 
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel
+
+      - name: Build wheels
+        run: |
+          cd python
+          python -m cibuildwheel --output-dir l0learn-wheelhouse
+        env:
+          CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
+
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: l0learn-wheelhouse
+          path: python/l0learn-wheelhouse/
+
+#name: Build
+#
+#on:
+#  workflow_dispatch:
+#
+#  push:
+#    # Pattern matched against refs/tags
+#    tags:
+#      - '**'
+#
+#jobs:
+#  build_wheels:
+#    name: Build wheels on ${{ matrix.os }}
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        os: [ubuntu-latest, macOS-10.15] # windows-2019, ]
+#
+#
+#    steps:
+#      - name: Checkout l0learn
+#        uses: actions/checkout@v2
+#        with:
+#          submodules: true
+#
+#      - name: Setup Python
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: 3.7
+#
+#      - name: Install cibuildwheel
+#        run: python -m pip install cibuildwheel
+#
+#      - name: Build wheels
+#        run: |
+#          cd python
+#          python -m cibuildwheel --output-dir l0learn-wheelhouse
+#        env:
+#          CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
+#          CIBW_BEFORE_ALL_LINUX: "yum install -y lapack-devel || apt-get install -y liblapack-dev && bash scripts/install_linux_libs.sh"
+##          CIBW_BEFORE_TEST: "pip install pytest numpy hypothesis"
+##          CIBW_TEST_COMMAND: "pytest {package}/tests"
+#          CIBW_ARCHS_MACOS: "x86_64 arm64"
+#          CIBW_BUILD_VERBOSITY: 3
+
+#      - uses: actions/upload-artifact@v2
+#        with:
+#          name: l0learn-wheelhouse
+#          path: python/l0learn-wheelhouse/
 #
 #  upload-to-pypip:
 #    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
