--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -16,7 +16,6 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macOS-latest]
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - name: Checkout l0learn
@@ -52,7 +51,6 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-2019]
-        python-version: [ "3.7", "3.8", "3.9"]
 
     steps:
       - name: Checkout l0learn
@@ -73,7 +71,7 @@ jobs:
           cd python
           python -m cibuildwheel --output-dir l0learn-wheelhouse
         env:
-          CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
+          CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux* cp310-* cp311-* cp312-*
 
       - name: Upload wheels
         uses: actions/upload-artifact@v2
