--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -15,11 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - os: ubuntu-latest
-            python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
-          - os: macOS-latest
-            python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        os: [ubuntu-latest, macOS-latest]
 
     steps:
       - name: Checkout l0learn
@@ -40,6 +36,7 @@ jobs:
           cd python
           python -m cibuildwheel --output-dir l0learn-wheelhouse
         env:
+          CIBW_BUILD: cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*
           CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
 
       - name: Upload wheels
@@ -75,7 +72,8 @@ jobs:
           cd python
           python -m cibuildwheel --output-dir l0learn-wheelhouse
         env:
-          CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux* cp310-* cp311-* cp312-*
+          CIBW_BUILD: cp37-* cp38-* cp39-*
+          CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
 
       - name: Upload wheels
         uses: actions/upload-artifact@v2
