--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -19,14 +19,14 @@ jobs:
 
     steps:
       - name: Checkout l0learn
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: true
 
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.x'
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel
@@ -55,14 +55,14 @@ jobs:
 
     steps:
       - name: Checkout l0learn
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: true
 
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.x'
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel
