--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -38,7 +38,7 @@ jobs:
         env:
           CIBW_BUILD: cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*
           CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
-          CIBW_BEFORE_ALL_LINUX: "yum install -y lapack-devel || apt-get install -y liblapack-dev && bash scripts/install_linux_libs.sh"
+          CIBW_BEFORE_ALL_LINUX: "bash scripts/install_linux_libs.sh"
 
       - name: Upload wheels
         uses: actions/upload-artifact@v2
@@ -75,6 +75,7 @@ jobs:
         env:
           CIBW_BUILD: cp37-* cp38-* cp39-*
           CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
+          CIBW_BEFORE_ALL_WINDOWS: "bash scripts/install_linux_libs.sh"
 
       - name: Upload wheels
         uses: actions/upload-artifact@v2
