--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "python/external/carma"]
 	path = python/external/carma
-	url = https://github.com/TNonet/carma.git
+	url = https://github.com/RUrlus/carma.git
 [submodule "python/external/pybind11"]
 	path = python/external/pybind11
 	url = https://github.com/pybind/pybind11.git
