--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -31,7 +31,8 @@ jobs:
           - os: macos-latest
           - os: ubuntu-latest
             INSTALL_DEPS: |
-              sudo apt-get install -y liblapack-dev
+              sudo apt-get update
+              sudo apt-get install -y liblapack-dev libopenblas-dev cmake build-essential
               bash scripts/install_linux_libs.sh
     defaults:
       run:
@@ -76,7 +77,8 @@ jobs:
 
       - name: install-dependencies
         run: |
-          sudo apt-get install -y liblapack-dev
+          sudo apt-get update
+          sudo apt-get install -y liblapack-dev libopenblas-dev cmake build-essential
           bash scripts/install_linux_libs.sh
 
       - name: Install L0Learn
@@ -92,4 +94,3 @@ jobs:
         run: coveralls --service=github
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
