--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -36,9 +36,9 @@ jobs:
           cd python
           python -m cibuildwheel --output-dir l0learn-wheelhouse
         env:
-          CIBW_BUILD: cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*
+          CIBW_BUILD: cp38-* cp39-* cp310-* cp311-* cp312-*
           CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
-          CIBW_BEFORE_ALL_LINUX: "bash scripts/install_linux_libs.sh"
+          CIBW_BEFORE_ALL_LINUX: "apt-get update && apt-get install -y liblapack-dev libopenblas-dev cmake build-essential && bash scripts/install_linux_libs.sh"
 
       - name: Upload wheels
         uses: actions/upload-artifact@v2
@@ -73,7 +73,7 @@ jobs:
           cd python
           python -m cibuildwheel --output-dir l0learn-wheelhouse
         env:
-          CIBW_BUILD: cp37-* cp38-* cp39-*
+          CIBW_BUILD: cp38-* cp39-* cp310-* cp311-* cp312-*
           CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
       - name: Upload wheels
         uses: actions/upload-artifact@v2
@@ -159,4 +159,3 @@ jobs:
 #          user: __token__
 #          password: ${{ secrets.PYPI_API_TOKEN }}
 #          packages_dir: python/l0learn-wheelhouse/
-
