--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -31,6 +31,14 @@ jobs:
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel
 
+      - name: Install Linux dependencies
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y liblapack-dev libopenblas-dev cmake build-essential
+          cd python
+          bash scripts/install_linux_libs.sh
+
       - name: Build wheels
         run: |
           cd python
@@ -38,7 +46,6 @@ jobs:
         env:
           CIBW_BUILD: cp38-* cp39-* cp310-* cp311-* cp312-*
           CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
-          CIBW_BEFORE_ALL_LINUX: "yum install -y lapack-devel openblas-devel cmake gcc gcc-c++ make || (apt-get update && apt-get install -y liblapack-dev libopenblas-dev cmake build-essential) && cd {package_dir} && bash scripts/install_linux_libs.sh"
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
