--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -47,7 +47,7 @@ jobs:
           CIBW_BUILD: cp38-* cp39-* cp310-* cp311-* cp312-*
           CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
           CIBW_BEFORE_ALL_LINUX: "yum install -y lapack-devel openblas-devel cmake gcc gcc-c++ make || (apt-get update && apt-get install -y liblapack-dev libopenblas-dev cmake build-essential)"
-          CIBW_BEFORE_BUILD_LINUX: "ls -la {project} && ls -la {project}/python && bash {project}/python/scripts/install_linux_libs.sh"
+          CIBW_BEFORE_BUILD_LINUX: "bash {project}/scripts/install_linux_libs.sh"
           CIBW_ENVIRONMENT: "LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH CFLAGS='-I/usr/local/include' CXXFLAGS='-I/usr/local/include' LDFLAGS='-L/usr/local/lib'"
           CIBW_BUILD_VERBOSITY: 3
 
