--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -15,7 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macOS-latest]
+        # os: [ubuntu-latest, macOS-latest]
+        os: [macOS-latest]
 
     steps:
       - name: Checkout l0learn
@@ -48,6 +49,8 @@ jobs:
           CIBW_SKIP: pp* *-win32 *-manylinux_i686 *musllinux*
           CIBW_BEFORE_ALL_LINUX: "yum install -y lapack-devel openblas-devel cmake gcc gcc-c++ make || (apt-get update && apt-get install -y liblapack-dev libopenblas-dev cmake build-essential)"
           CIBW_BEFORE_BUILD_LINUX: "bash {project}/scripts/install_linux_libs.sh"
+          CIBW_BEFORE_BUILD_MACOS: "cd {project} && bash scripts/install_linux_libs.sh"
+          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "python {project}/scripts/fix_macos_wheel.py {wheel} {dest_dir}"
           CIBW_ENVIRONMENT: "LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH CFLAGS='-I/usr/local/include' CXXFLAGS='-I/usr/local/include' LDFLAGS='-L/usr/local/lib'"
           CIBW_BUILD_VERBOSITY: 3
 
@@ -63,7 +66,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019]
+        # os: [windows-2019]
+        os: []
 
     steps:
       - name: Checkout l0learn
